<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tinytsunami.sensorsaver.MainActivity">


    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/StaticLabel3"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/other_setting_filename"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                tools:text="檔案名稱" />

            <TextView
                android:id="@+id/TextViewFilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:layout_span="2"
                android:layout_weight="5"
                android:text="未產生"
                android:textSize="18sp"
                tools:text="20170110_100300.txt" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/StaticLabel4"
                android:layout_height="22dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="10dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/other_setting_type"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/SpinnerFileTag"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_span="2"
                android:layout_weight="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/StaticLabel5"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/other_setting_frequency"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextViewFrequency"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="0200ms"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@+id/SeekBarFrequency"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="320dp" />

            <SeekBar
                android:id="@+id/SeekBarFrequency"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="3"
                android:layout_margin="4dp"
                android:layout_weight="4"
                android:max="1000"
                android:min="1"
                android:progress="200"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="298dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/StaticLabel6"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/other_setting_timestamp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextViewTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:layout_span="2"
                android:layout_weight="5"
                android:text="00:00:00"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="332dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/StaticLabel7"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/other_setting_network"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/CheckBoxNetworkUsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_margin="0dp"
                android:layout_span="1"
                android:layout_weight="3"
                android:checked="false"
                android:text="網路" />

            <EditText
                android:id="@+id/EditTextNetworkAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_span="1"
                android:layout_weight="2"
                android:ems="10"
                android:hint="address"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/EditTextNetworkAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:layout_span="3"
                android:layout_weight="1"
                android:ems="10"
                android:hint="user"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditTextNetworkPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_span="1"
                android:layout_weight="1"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ButtonSaveStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                android:elevation="0dp"
                android:text="@string/save_start"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextViewTimestamp" />

            <Button
                android:id="@+id/ButtonSaveEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                android:elevation="0dp"
                android:enabled="false"
                android:text="@string/save_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ButtonSaveStart" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:layout_weight="1"
                app:srcCompat="@drawable/keyboard" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
